cmake_minimum_required(VERSION 3.5)
project(helloworld)
find_package(Threads)
set(BOOST_ROOT /home/fit/.linuxbrew/Cellar/boost/1.61.0)
set(BOOST_INCLUDE_DIR ${BOOST_ROOT}/include)
set(BOOST_LIBRARY_DIR ${BOOST_ROOT}/lib)
find_package(Boost REQUIRED regex date_time system filesystem thread graph  timer)
include_directories(${BOOST_INCLUDE_DIR})
link_libraries(${BOOST_LIBRARY_DIR})
find_package(Boost)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
add_executable(helloworld main.cpp)
#in ubuntu , please install libboost-date-time-dev : sudo apt-get install  libboost-date-time-dev
message(${BOOST_INCLUDE_DIR})
target_link_libraries(helloworld ${CMAKE_THREAD_LIBS_INIT}  boost_date_time)
